force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Case__c/fields/agf__Brief_Description__c.field-meta.xml
<CustomField>
    <fullName>agf__Brief_Description__c</fullName>
    <label>Brief Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>