force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Case__c/fields/agf__Count_Automated_Executions__c.field-meta.xml
<CustomField>
    <fullName>agf__Count_Automated_Executions__c</fullName>
    <description>Count the number of completed automated executions</description>
    <inlineHelpText>Count the number of completed automated executions</inlineHelpText>
    <label>Count Automated Executions</label>
    <summaryFilterItems>
        <field>agf__QA_Test_Execution__c.agf__Type__c</field>
        <operation>equals</operation>
        <value>Ftest, Silktest, Utest, .Net, Client Automation, Selenium, ProdTest - Extended, ProdTest - API, ProdTest - Selenium</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>agf__QA_Test_Execution__c.agf__Status__c</field>
        <operation>equals</operation>
        <value>Passed, Failed</value>
    </summaryFilterItems>
    <summaryForeignKey>agf__QA_Test_Execution__c.agf__Test_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>