force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Case__c/fields/agf__Count_Automation_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>agf__Count_Automation_To_Complete__c</fullName>
    <description>Counts the number of automated executions that are not done</description>
    <inlineHelpText>Counts the number of automated executions that are not done</inlineHelpText>
    <label>Count Automation To Complete</label>
    <summaryFilterItems>
        <field>agf__QA_Test_Execution__c.agf__Type__c</field>
        <operation>equals</operation>
        <value>Ftest, Silktest, Utest, .Net, Client Automation, Selenium, ProdTest - Extended, ProdTest - API, ProdTest - Selenium</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>agf__QA_Test_Execution__c.agf__Status__c</field>
        <operation>notEqual</operation>
        <value>Passed, Failed</value>
    </summaryFilterItems>
    <summaryForeignKey>agf__QA_Test_Execution__c.agf__Test_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>