force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Case__c/fields/agf__Expected_Results__c.field-meta.xml
<CustomField>
    <fullName>agf__Expected_Results__c</fullName>
    <label>Expected Results</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>