force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Case__c/fields/agf__Ftest_Id__c.field-meta.xml
<CustomField>
    <fullName>agf__Ftest_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Ftest Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>