force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Case__c/fields/agf__Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>agf__Hierarchy__c</fullName>
    <label>Hierarchy</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>