force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Case__c/fields/agf__Is_Automated__c.field-meta.xml
<CustomField>
    <fullName>agf__Is_Automated__c</fullName>
    <description>Value is 1 if there is at least one completed execution of types ftest/prodtest/silk/selenium, or if the test case ftest ID is non-null (workaround for an old bug in the annotation uploader) Value is 0 otherwise</description>
    <formula>if( agf__Count_Automated_Executions__c &gt; 0, 1, if( LEN(agf__Ftest_Id__c)&gt;0, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A test case is automated when the ftest ID field of any of its children if non-null OR when there is a child execution with type=ftest/prodtest/silk/selenium and its status is Passed</inlineHelpText>
    <label>Automation Completed?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>