force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Case__c/fields/agf__Is_Obsolete__c.field-meta.xml
<CustomField>
    <fullName>agf__Is_Obsolete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Obsolete</label>
    <type>Checkbox</type>
</CustomField>