force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Case__c/fields/agf__Manual_Auto_Annotation__c.field-meta.xml
<CustomField>
    <fullName>agf__Manual_Auto_Annotation__c</fullName>
    <description>Formula that states if a test case has any executions of an automation type.</description>
    <formula>if (and(agf__Count_Automated_Executions__c &lt;= 0,0=LEN(agf__Ftest_Id__c)),&quot;Manual&quot;, if (OR(ISNULL(agf__Ftest_Id__c), LEN(agf__Ftest_Id__c) == 0), &quot;Automated w/o Annotation&quot;, &quot;Automated and Annotated&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Can be in one of three values:
Manual, Automated, and Incomplete Automation.
Incomplete Automation = invalid annotation or Execution not Marked as Passed or Failed</inlineHelpText>
    <label>Is Automated and Annotated?</label>
    <type>Text</type>
</CustomField>