force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Case__c/fields/agf__Order__c.field-meta.xml
<CustomField>
    <fullName>agf__Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Order of this test case in the hierarchy.</description>
    <inlineHelpText>Order of this test case in the hierarchy</inlineHelpText>
    <label>Order</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>