force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Case__c/fields/agf__Owner__c.field-meta.xml
<CustomField>
    <fullName>agf__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00ND0000001rflAMAQ</relationshipName>
    <type>Lookup</type>
</CustomField>