force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Case__c/fields/agf__Steps_to_Reproduce__c.field-meta.xml
<CustomField>
    <fullName>agf__Steps_to_Reproduce__c</fullName>
    <defaultValue>&quot;No description&quot;</defaultValue>
    <description>Details of the test case. Setup info, steps to follow, etc.
Leave the expected results out. There is field for that</description>
    <inlineHelpText>Details of the test case. Setup info, steps to follow, etc.</inlineHelpText>
    <label>Long Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>