force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Case__c/validationRules/agf__Invalid_Priority_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Invalid_Priority_Value</fullName>
    <active>false</active>
    <description>Users should use a valid picklist value</description>
    <errorConditionFormula>CASE(  agf__Priority__c  ,

&quot;High&quot;, 1,

&quot;Medium&quot;, 1,

&quot;Low&quot;, 1,

&quot;&quot;,1,

0) = 0</errorConditionFormula>
    <errorDisplayField>agf__Priority__c</errorDisplayField>
    <errorMessage>Incorrect Priority Value. Must be: High, Medium, or Low</errorMessage>
</ValidationRule>