force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Case__c/validationRules/agf__Order.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Order</fullName>
    <active>false</active>
    <description>Throw error message when Order is negative</description>
    <errorConditionFormula>agf__Order__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>agf__Order__c</errorDisplayField>
    <errorMessage>Order cannot be Negative</errorMessage>
</ValidationRule>