force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Case__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>NAME</columns>
    <columns>agf__Brief_Description__c</columns>
    <columns>agf__Hierarchy__c</columns>
    <columns>agf__Priority__c</columns>
    <columns>agf__Manual_Auto_Annotation__c</columns>
    <columns>agf__Is_Obsolete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>